# looksee-mcp

./: .env.example  .gitignore  README.en.md  README.md  pyproject.toml
src/looksee_mcp/: __init__.py  server.py
