[project]
name = "looksee-mcp"
version = "1.0.0"
description = "看图 + 搜索 MCP 工具集，支持任意 OpenAI 兼容端点"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "zaoan8" }]
keywords = ["mcp", "vision", "search", "openai", "grok", "claude-code"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
looksee-mcp = "looksee_mcp.server:serve"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
